<resources>
    <string name="app_name">project</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="login1">Login</string>
    <string name="logofcds">logo</string>
    <string name="diabeseid">Diabese</string>
    <string name="preasureid">Preasure</string>
    <string name="heartid">Heart</string>
    <string name="antibioticsid">Antibiotics</string>
</resources>