<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".login">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FDFDFD"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="220dp"
        android:layout_height="480dp"
        android:background="@drawable/shape_left_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlHeader" />

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="331dp"
        android:layout_height="335dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlHeader">

        <EditText
            android:id="@+id/mEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:drawableRight="@drawable/email"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailSubject"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/mPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:drawableRight="@drawable/passkey"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="@string/forgot_password" />


    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_login_button"
        android:text="login"
        android:textColor="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="@+id/loginPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />
        <TextView
            android:id="@+id/signup_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/sign_up"
            android:textColor="#E040FB"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>